--- a/petshop/templates/editpet.html
+++ b/petshop/templates/editpet.html
@@ -25,10 +25,11 @@
   <div class="mb-3">
     <div class="form-check">
       {# TODO  Add sold checkbox here #}
-      <label class="form-check-label" for="sold" > Sold </label>
+      <input type = "checkbox" id = "sold" name = "sold" >
+      <label  class="form-check-label" for="sold" > Sold </label>
     </div>
   </div>
-
+  
   <div class="mb-3">
     <button type="submit" class="btn btn-primary">Update</button>
   </div>
