--- a/petshop/templates/petdetail.html
+++ b/petshop/templates/petdetail.html
@@ -18,7 +18,10 @@
   {% endfor %}
 </p>
 <p>
-  <a class="btn btn-primary" href="{{url_for('pets.edit', pid=id)}}">Edit</a>
-</p>
+  <a class="btn btn-primary" href="{{url_for('pets.edit', pid=id)}}">Edit</a><br/>
+</p> 
+<p class="description"> 
+   {{description}}
+ </p>
 
 {% endblock %}
